--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,12 @@ main {
 
 .products ul {
   display: flex;
+  overflow: auto;
   gap: 15px;
+  flex-direction: row;
+  align-items: center;
+  height: 50px;
+  box-shadow: inset -7px 0 9px -9px rgba(0, 0, 0, 0.7);
 }
 
 .products li {
@@ -152,6 +157,12 @@ main {
   font-weight: 500;
   color: rgb(167, 167, 167);
   cursor: pointer;
+  white-space: nowrap;
+
+}
+
+.products ul::-webkit-scrollbar {
+  display: none;
 }
 
 .products li.active {
@@ -314,4 +325,27 @@ main {
   background-color: #099e42;
   border-bottom-left-radius: 10px;
 
+}
+
+
+
+.orders {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.order {
+  display: flex;
+  border-radius: 12px;
+  justify-content: space-between;
+  box-shadow: 0 0 12px rgba(4, 69, 29, 0.5);
+  padding: 15px;
+}
+
+.order img {
+  max-width: 150px;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
 }
