--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ img {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 0px 20px;
+  padding: 0px 10px;
 }
 
 header {
@@ -70,6 +70,7 @@ header .container img {
 #root {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 header {
@@ -206,10 +207,19 @@ main {
 }
 
 .product {
-  padding: 15px;
+  padding: 0px;
   background-color: #e6ece8;
   border-radius: 7px;
   display: none;
+  position: relative;
+}
+
+.pr-cards .inner {
+  padding: 7px;
+  display: flex;
+  flex-direction: column;
+  height: 150px;
+  gap: 7px;
 }
 
 .pr-img {
@@ -217,7 +227,6 @@ main {
   overflow: hidden;
   height: 130px;
   position: relative;
-  margin-bottom: 10px;
 }
 
 .pr-img img {
@@ -225,6 +234,11 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.pr-cards .actions {
+  position: absolute;
+  bottom: 10px;
 }
 
 .actions {
@@ -235,8 +249,10 @@ main {
 }
 
 .actions button {
+  max-width: 40px;
+  height: 40px;
   width: 100%;
-  aspect-ratio: 1/1;
+
   font-size: 25px;
   font-weight: 500;
   border-radius: 10px;
@@ -256,9 +272,10 @@ main {
 }
 
 .pr-title {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 500;
   text-transform: capitalize;
+  line-height: 22px;
 }
 
 .product h3 {
@@ -333,19 +350,93 @@ main {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  justify-content: center;
+  align-items: center;
 }
 
 .order {
   display: flex;
   border-radius: 12px;
-  justify-content: space-between;
+  gap: 15px;
   box-shadow: 0 0 12px rgba(4, 69, 29, 0.5);
   padding: 15px;
+  max-width: 90%;
+  width: 100%;
+}
+
+.upper {
+  display: flex;
+  align-items: baseline;
+
 }
 
 .order img {
-  max-width: 150px;
+  max-width: 85px;
   width: 100%;
-  height: 100%;
+  height: 85px;
   border-radius: 12px;
+}
+
+.order .actions {
+  align-items: center;
+}
+
+.actions span {
+  font-weight: 500;
+  color: #04451d;
+  font-size: 20px;
+}
+
+.content .title {
+  font-weight: 600;
+  color: #04451d;
+  font-size: 17px;
+}
+
+.content {
+
+  display: flex;
+  flex-direction: column;
+  align-items: normal;
+  justify-content: space-between;
+  width: 100%;
+
+}
+
+.upper span {
+  font-size: 22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.sc_title {
+  padding: 15px;
+  margin-bottom: 25px;
+  box-shadow: 0 0 12px rgba(4, 69, 29, 0.5);
+  text-align: center;
+}
+
+.btm-inner.href {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+.btm-inner.href span{
+  font-size: 22px;
+}
+.bottom.href {
+  display: flex;
+  flex-direction: column;
+  height: 130px;
+}
+
+.plus.href {
+  width: 100%;
+  padding: 10px;
+  font-size: 24px;
+}
+
+.plus:disabled{
+  background-color: #ddd;
 }
