--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   max-width: 500px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   height: 100%;
+  background-color: white;
 }
 
 button {
