--- a/src/index.css
+++ b/src/index.css
@@ -93,13 +93,13 @@ main {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  height: 200px;
+  height: 170px;
   border-radius: 15px;
   /* Center slide text vertically */
   display: flex;
 
   overflow: hidden;
-  min-height: 200px;
+  min-height: 160px;
   /* if you prefer */
 
 }
@@ -126,6 +126,16 @@ main {
   border: 1px solid #04451d;
   border-radius: 7px;
   box-shadow: 0 0 15px rgba(4, 69, 29, 0.5);
+  position: relative;
+  
+}
+
+.clear {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  font-weight: 600;
+  transform: translate(-50%, -50%);
 }
 
 .search button {
