--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@ main {
   border-radius: 7px;
   box-shadow: 0 0 15px rgba(4, 69, 29, 0.5);
   position: relative;
-  
+  overflow: hidden;
 }
 
 .clear {
@@ -403,9 +403,11 @@ main {
   color: #04451d;
   font-size: 17px;
 }
-.tab-btn:last-child{
+
+.tab-btn:last-child {
   margin-right: 10px;
 }
+
 .content {
 
   display: flex;
@@ -468,4 +470,18 @@ main {
   left: 35px;
   font-size: 30px;
   transform: translate(-50%, -50%);
+}
+
+
+
+.loader {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1001;
+  background-color: white;
 }
