--- a/src/index.css
+++ b/src/index.css
@@ -281,11 +281,73 @@ main {
 
 .plus {
   background-color: green;
-  /* position: relative; */
+
+  position: relative;
 }
 
 
 
+
+.plus:hover {
+  transition-duration: 0.1s;
+  background-color: green;
+}
+
+.plus:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 4em;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.5s;
+  box-shadow: 0 0 10px 40px white;
+}
+
+.plus:active:after {
+  box-shadow: 0 0 0 0 #04451d;
+  position: absolute;
+  border-radius: 10px;
+  left: 0;
+  top: 0;
+  opacity: 1;
+  transition: 0s;
+}
+
+.minus{
+  position: relative;
+}
+.minus:hover {
+  transition-duration: 0.1s;
+  background-color: #e3647c;
+}
+
+.minus:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 4em;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.5s;
+  box-shadow: 0 0 10px 40px white;
+}
+
+.minus:active:after {
+  box-shadow: 0 0 0 0 #e3647c;
+  position: absolute;
+  border-radius: 10px;
+  left: 0;
+  top: 0;
+  opacity: 1;
+  transition: 0s;
+}
 
 .pr-title {
   font-size: 18px;
