--- a/src/index.css
+++ b/src/index.css
@@ -563,3 +563,35 @@ main {
   z-index: 1001;
   background-color: white;
 }
+
+.address {
+  /* position: absolute; */
+  /* bottom: 15px; */
+  max-width: 90%;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.address input {
+  width: 100%;
+  padding: 7px 12px;
+  font-size: 18px;
+  border: 1px solid #04451d;
+  box-shadow: 0 0 10px rgba(4, 69, 29, 0.5);
+  border-radius: 12px;
+  margin-top: 10px;
+}
+
+.address span {
+  color: #04451d;
+  font-weight: 600;
+}
+
+
+
+.error {
+  display: none;
+  color: crimson !important;
+  font-size: 15px;
+}
