--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,7 @@ main {
   flex-direction: row;
   align-items: center;
   height: 50px;
+  scroll-behavior: smooth;
   box-shadow: inset -7px 0 9px -9px rgba(0, 0, 0, 0.7);
 }
 
@@ -174,7 +175,9 @@ main {
   color: rgb(167, 167, 167);
   cursor: pointer;
   white-space: nowrap;
-
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .products ul::-webkit-scrollbar {
@@ -445,15 +448,26 @@ main {
 }
 
 .btm-inner h4 {
-  font-size: 22px;
+  color: #04451d;
+
+  font-size: 20px;
 }
 
 .btm-inner span {
-  font-size: 20px !important;
+  font-size: 18px !important;
+  font-weight: 500;
 }
 
 .plus.href {
   margin-top: 10px;
+}
+
+.bottom.href h4 {
+  font-size: 22px;
+}
+
+.bottom.href span {
+  font-size: 20px !important;
 }
 
 .order {
@@ -462,8 +476,14 @@ main {
   gap: 15px;
   box-shadow: 0 0 12px rgba(4, 69, 29, 0.5);
   padding: 15px;
-  max-width: 90%;
+  max-width: 96%;
   width: 100%;
+}
+
+.order.add {
+  box-shadow: none;
+  margin: 0 auto;
+  padding: 7px;
 }
 
 .upper {
@@ -584,7 +604,7 @@ main {
   width: 100%;
   margin: 0 auto;
   margin-bottom: 17px;
-position: relative;
+  position: relative;
 }
 
 .address input,
@@ -618,7 +638,8 @@ position: relative;
   display: flex;
   flex-direction: column;
 }
-textarea{
+
+textarea {
   font-weight: 600;
   height: 100px;
 }
